<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_one"
        app:layout_constraintVertical_weight="1"
        android:text="@string/number_one" />

    <Button
        android:id="@+id/button_one"
        android:text="@string/number_one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view"
        app:layout_constraintEnd_toStartOf="@id/button_two"
        app:layout_constraintBottom_toTopOf="@id/button_four"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_two"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/number_two"
        app:layout_constraintStart_toEndOf="@+id/button_one"
        app:layout_constraintTop_toBottomOf="@id/text_view"
        app:layout_constraintEnd_toStartOf="@+id/button_three"
        app:layout_constraintBottom_toTopOf="@id/button_five"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_three"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/number_three"
        app:layout_constraintStart_toEndOf="@id/button_two"
        app:layout_constraintTop_toBottomOf="@+id/text_view"
        app:layout_constraintEnd_toStartOf="@id/button_clear_all"
        app:layout_constraintBottom_toTopOf="@id/button_six"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_clear_all"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/clear_all"
        app:layout_constraintStart_toEndOf="@id/button_three"
        app:layout_constraintTop_toBottomOf="@+id/text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_four"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/number_four"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_five"
        app:layout_constraintTop_toBottomOf="@+id/button_one"
        app:layout_constraintBottom_toTopOf="@id/button_seven"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_five"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/number_five"
        app:layout_constraintStart_toEndOf="@+id/button_four"
        app:layout_constraintTop_toBottomOf="@id/button_two"
        app:layout_constraintEnd_toStartOf="@+id/button_six"
        app:layout_constraintBottom_toTopOf="@id/button_eight"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_six"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/number_six"
        app:layout_constraintStart_toEndOf="@id/button_five"
        app:layout_constraintTop_toBottomOf="@+id/button_three"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        app:layout_constraintBottom_toTopOf="@id/button_nine"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/plus_sign"
        app:layout_constraintStart_toEndOf="@id/button_six"
        app:layout_constraintTop_toBottomOf="@+id/button_clear_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_zero"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_seven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/number_seven"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_four"
        app:layout_constraintEnd_toStartOf="@id/button_eight"
        app:layout_constraintBottom_toTopOf="@id/button_calculate"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_eight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/number_eight"
        app:layout_constraintStart_toEndOf="@+id/button_one"
        app:layout_constraintTop_toBottomOf="@id/button_five"
        app:layout_constraintEnd_toStartOf="@+id/button_nine"
        app:layout_constraintBottom_toTopOf="@id/button_calculate"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_nine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/number_nine"
        app:layout_constraintStart_toEndOf="@id/button_eight"
        app:layout_constraintTop_toBottomOf="@+id/button_six"
        app:layout_constraintEnd_toStartOf="@id/button_zero"
        app:layout_constraintBottom_toTopOf="@id/button_calculate"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/number_zero"
        app:layout_constraintStart_toEndOf="@id/button_nine"
        app:layout_constraintTop_toBottomOf="@+id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_calculate"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/equal_sign"
        app:layout_constraintTop_toBottomOf="@id/button_seven"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_weight="1" />

</androidx.constraintlayout.widget.ConstraintLayout>